<resources>
    <string name="app_name">HAYONERO</string>
    <string name="informationDetails">
        就寝時間\n
        19:00 ~ 21:59 \t 3ポイント\n
        22:00 ~ 22:59 \t 2ポイント\n
        23:00 ~ 23:59 \t 1ポイント\n
        24:00 ~ 18:59 \t 利用時間外 \n
       \n\n
        ※2時間以上他のアプリを使用していなければ、就寝判定されます。</string>
    <string name="information">ポイント付与について</string>
    <string name="currentPoints">現在獲得ポイント</string>
    <string name="getPoints">ポイント獲得</string>
    <string name="setTime">設定した時刻\n0:00</string>
    <string name="giveUpButton">諦める</string>
    <string name="startButton">START</string>
    <string name="i">i</string>
    <string name="timeSetting">はよねる時間の設定</string>
    <string name="achievement">連続達成回数</string>
    <string name="finish">終了</string>
    <string name="fail">失敗</string>
    <string name="failComment">今日は、ポイントが付与されません。</string>
    <string name="sleepTime">00:00</string>
    <string name="setSleepTime">寝る時間を設定</string>
    <string name="goToMain">メインに戻る</string>
    <string name="success">成功</string>
    <string name="userRankText">あなたは世界で 333位 です</string>
    <string name="rankTitle">今日のランキング</string>

</resources>